--- a/src/scss/modules/_team.scss
+++ b/src/scss/modules/_team.scss
@@ -59,6 +59,7 @@
     @extend .d-inline-block, .text-center;
     background-color: #ebebeb;
     border-radius: 50%;
+    cursor: pointer;
     height: 30px;
     width: 30px;
 
