--- a/src/scss/modules/_works.scss
+++ b/src/scss/modules/_works.scss
@@ -22,11 +22,11 @@
   }
 
   &__link {
-    @extend .text-white, .font-italic, .d-block, .text-md-center;
+    @extend .text-white, .font-italic, .d-block, .text-center;
     border: 1px solid white;
     font-family: "PT Sans", sans-serif;
     font-size: rem(20);
-    margin: 76px auto auto;
+    margin: 103px auto auto;
     padding-top: 7px;
     padding-bottom: 11px;
     width: 16.2%;
@@ -34,7 +34,7 @@
 }
 
 .slick-dots {
-  @extend .d-none, .d-md-block, .position-relative;
+  @extend .position-relative;
   top: 35px;
   bottom: 0;
   margin: auto;
@@ -44,12 +44,68 @@
     margin: 0;
 
     & button::before {
+      font-size: rem(35);
       width: 20px;
     }
   }
+}
 
-  & li button:before {
-    font-size: rem(35);
+.dots {
+  position: absolute;
+  bottom: -57px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  li {
+    position: relative;
+    display: inline-block;
+    height: 17px;
+    width: 17px;
+    padding: 0;
+    cursor: pointer;
+    button {
+      border: 0;
+      background: transparent;
+      display: block;
+      height: 17px;
+      width: 17px;
+      outline: none;
+      line-height: 0;
+      font-size: 0;
+      color: transparent;
+      padding: 5px;
+      cursor: pointer;
+      &:hover, &:focus {
+        outline: none;
+        &:before {
+          opacity: 1;
+        }
+      }
+      &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: '\f10c';
+        width: 17px;
+        height: 17px;
+        font-family: FontAwesome;
+        font-size: 11px;
+        line-height: 20px;
+        text-align: center;
+        color: white;
+        opacity: 0.7;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    }
+    &.slick-active button:before {
+      content: '\f111';
+      color: white;
+      opacity: 1;
+    }
   }
 }
 
@@ -63,11 +119,15 @@
     }
 
     &__slider, &__link {
-      margin-top: 0;
+      margin-top: 70px;
     }
 
     &__link {
       width: 33%;
     }
+  }
+
+  .dots {
+    bottom: -45px;
   }
 }
