improve styles for mobile

--- a/src/scss/modules/_about-us.scss
+++ b/src/scss/modules/_about-us.scss
@@ -42,6 +42,7 @@
   .about-us {
     padding-right: 16px;
     padding-left: 16px;
+    text-align: center;
 
     &__text {
       padding-top: 10px;
