--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -70,18 +70,20 @@
 @media screen and (max-width: 767px) {
   .header {
     &__navbar {
+      padding-top: 0;
+      padding-bottom: 0;
       padding-left: 16px;
     }
 
     &__content {
-      padding-top: 80px;
+      padding-top: 100px;
       padding-right: 16px;
       padding-left: 16px;
     }
 
     &__nav {
       align-items: center;
-      padding: 16px;
+      padding: 0 16px;
       flex-wrap: wrap;
     }
 
